app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kube-dashboard.enthires.com
      http:
        paths:
          - path: /
            backend:
              serviceName: the-cluster-namedeploy-the-deployment-test-service-pod-b25b639e
              servicePort: 80
