grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/)$ $1/ break;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: monitoring
spec:
  rules:
    - http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: 'ImplementationSpecific'
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
